--- a/examples/package.json
+++ b/examples/package.json
@@ -9,14 +9,16 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "dependencies": {
+    "chart.js": "^4.4.3"
+  },
   "devDependencies": {
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
-    "rollup": "^4.20.0",
-    "rollup-plugin-postcss": "^4.0.2"
-  },
-  "dependencies": {
-    "chart.js": "^4.4.3"
+    "cssnano": "^7.0.4",
+    "rollup": "^2.79.1",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
