--- a/examples/package.json
+++ b/examples/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "chart.js": "^4.4.3"
+    "chart.js": "^4.4.3",
+    "purecss": "^3.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-babel": "^6.0.4",
@@ -18,6 +19,7 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "cssnano": "^7.0.4",
     "rollup": "^2.79.1",
+    "rollup-plugin-import-css": "^3.5.0",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2"
   }
