--- a/example/package.json
+++ b/example/package.json
@@ -14,12 +14,14 @@
     "purecss": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.24.7",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "cssnano": "^7.0.4",
     "rollup": "^2.79.1",
     "rollup-plugin-import-css": "^3.5.0",
+    "rollup-plugin-inject-process-env": "^1.3.1",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2"
   }
